--- a/index.html
+++ b/index.html
@@ -622,7 +622,7 @@
             <!-- Пример карточки продукта 1 -->
             <div class="product-card">
                 <!-- Заглушка изображения продукта -->
-                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Игровой+ПК" alt="Игровой ПК Luna Pro">
+                <img src="https://placehold.co/200x150/111/0f0?text=МОЩНЫЙ+ПК" alt="Игровой ПК Luna Pro">
                 <h3 class="product-name">Игровой ПК Luna Pro</h3>
                 <p class="product-description-short">Мощный компьютер для максимальной производительности в любых играх.</p>
                 <div class="price">499 990 KZT</div>
@@ -632,7 +632,7 @@
 
             <!-- Пример карточки продукта 2 -->
             <div class="product-card">
-                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Монитор+144Гц" alt="Монитор Luna UltraView 144Hz">
+                <img src="https://placehold.co/200x150/111/0f0?text=МОНИТОР+144ГЦ" alt="Монитор Luna UltraView 144Hz">
                 <h3 class="product-name">Монитор Luna UltraView 144Hz</h3>
                 <p class="product-description-short">Погрузитесь в игру с высокой частотой обновления и четким изображением.</p>
                 <div class="price">125 000 KZT</div>
@@ -642,7 +642,7 @@
 
             <!-- Пример карточки продукта 3 -->
             <div class="product-card">
-                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Мышь+Gaming" alt="Игровая мышь Luna Precision">
+                <img src="https://placehold.co/200x150/111/0f0?text=ИГРОВАЯ+МЫШЬ" alt="Игровая мышь Luna Precision">
                 <h3 class="product-name">Игровая мышь Luna Precision</h3>
                 <p class="product-description-short">Точность и комфорт для долгих игровых сессий.</p>
                 <div class="price">25 000 KZT</div>
@@ -652,7 +652,7 @@
 
             <!-- Пример карточки продукта 4 -->
             <div class="product-card">
-                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Клавиатура" alt="Механическая клавиатура Luna Tactile">
+                <img src="https://placehold.co/200x150/111/0f0?text=МЕХ.+КЛАВИАТУРА" alt="Механическая клавиатура Luna Tactile">
                 <h3 class="product-name">Механическая клавиатура Luna Tactile</h3>
                 <p class="product-description-short">Быстрый отклик и приятные тактильные ощущения.</p>
                 <div class="price">45 000 KZT</div>
@@ -662,7 +662,7 @@
 
             <!-- Пример карточки продукта 5 -->
             <div class="product-card">
-                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Ноутбук+Gaming" alt="Игровой ноутбук Luna Blaze">
+                <img src="https://placehold.co/200x150/111/0f0?text=ИГРОВОЙ+НОУТБУК" alt="Игровой ноутбук Luna Blaze">
                 <h3 class="product-name">Игровой ноутбук Luna Blaze</h3>
                 <p class="product-description-short">Мощность настольного ПК в компактном корпусе.</p>
                 <div class="price">399 990 KZT</div>
@@ -672,7 +672,7 @@
 
             <!-- Пример карточки продукта 6 -->
             <div class="product-card">
-                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Наушники" alt="Игровые наушники Luna Aura">
+                <img src="https://placehold.co/200x150/111/0f0?text=ИГР.+НАУШНИКИ" alt="Игровые наушники Luna Aura">
                 <h3 class="product-name">Игровые наушники Luna Aura</h3>
                 <p class="product-description-short">Чистый звук и удобство для полного погружения.</p>
                 <div class="price">35 000 KZT</div>
