--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
     <!-- Новая секция для Hero-изображений -->
     <div class="hero-sections">
         <section class="hero-slide">
-            <img src="image0_large.jpg" alt="Игровые мониторы Luna" class="hero-background-image">
+            <img src="img/image0_large.jpg" alt="Игровые мониторы Luna" class="hero-background-image">
             <div class="hero-content">
                 <h2>Визуальное Превосходство</h2>
                 <p>Погрузитесь в игровой мир с кристально чистым изображением на наших высокопроизводительных мониторах.</p>
@@ -597,7 +597,7 @@
         </section>
 
         <section class="hero-slide">
-            <img src="image0_large (1).jpg" alt="Игровая периферия Luna" class="hero-background-image">
+            <img src="img/image0_large (1).jpg" alt="Игровая периферия Luna" class="hero-background-image">
             <div class="hero-content">
                 <h2>Полная Боевая Готовность</h2>
                 <p>Оснастите свою станцию лучшей игровой периферией для максимальной производительности и комфорта.</p>
@@ -606,7 +606,7 @@
         </section>
 
         <section class="hero-slide">
-            <img src="image0_large (2).jpg" alt="Игровые клавиатуры Luna" class="hero-background-image">
+            <img src="img/image0_large (2).jpg" alt="Игровые клавиатуры Luna" class="hero-background-image">
             <div class="hero-content">
                 <h2>Превосходство в Каждом Нажатии</h2>
                 <p>Выберите свою идеальную клавиатуру для мгновенного отклика и тактического преимущества.</p>
