--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             left: 0;
             z-index: 1; /* Фон под контентом слайда */
             opacity: 0; /* Изначально скрыто для анимации */
-            transform: scale(1.1); /* Слегка увеличено для эффекта зума при появлении */
+            transform: scale(1.05); /* Слегка увеличено для эффекта зума при появлении (было 1.1) */
             transition: opacity 1s ease-out, transform 1s ease-out; /* Плавное появление */
         }
 
@@ -178,24 +178,24 @@
         .hero-content {
             position: relative;
             z-index: 2; /* Контент поверх изображения */
-            padding: 15px 30px; /* Уменьшил паддинг */
-            /* background-color: rgba(0, 0, 0, 0.4); */ /* Убрал фоновый цвет */
+            padding: 20px 30px; /* Немного уменьшил паддинг */
+            background-color: rgba(0, 0, 0, 0.4); /* Полупрозрачный черный фон для читаемости (было 0.6) */
             border-radius: 10px;
-            max-width: 600px; /* Уменьшил максимальную ширину */
-            /* box-shadow: 0 5px 20px rgba(0, 255, 0, 0.2); */ /* Убрал тень */
+            max-width: 550px; /* Уменьшил максимальную ширину (было 600px) */
+            box-shadow: 0 4px 15px rgba(0, 255, 0, 0.15); /* Более мягкая тень (было 0.2) */
         }
 
         .hero-content h2 {
-            font-size: 2.8em; /* Уменьшил размер заголовка */
+            font-size: 2.5em; /* Уменьшил размер заголовка (было 3.5em) */
             font-family: 'Razer Blackwidow', sans-serif; /* Применил шрифт Razer */
-            margin-bottom: 15px; /* Уменьшил отступ */
+            margin-bottom: 12px; /* Уменьшил отступ */
             color: var(--accent-green);
-            text-shadow: 0 0 10px rgba(0, 255, 0, 0.7); /* Чуть уменьшил тень */
+            text-shadow: 0 0 8px rgba(0, 255, 0, 0.6); /* Чуть уменьшил тень */
         }
 
         .hero-content p {
-            font-size: 1.2em; /* Уменьшил размер параграфа */
-            margin-bottom: 25px; /* Уменьшил отступ */
+            font-size: 1.1em; /* Уменьшил размер параграфа (было 1.5em) */
+            margin-bottom: 20px; /* Уменьшил отступ */
             color: var(--text-light);
         }
 
