--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
     <!-- Новая секция для Hero-изображений -->
     <div class="hero-sections">
         <section class="hero-slide">
-            <img src="img/image0_large.jpg" alt="Игровые мониторы Luna" class="hero-background-image">
+            <img src="img/Airbrush-Image-Enhancer-1749760872731.jpeg" alt="Игровые мониторы Luna" class="hero-background-image">
             <div class="hero-content">
                 <h2>Визуальное Превосходство</h2>
                 <p>Погрузитесь в игровой мир с кристально чистым изображением на наших высокопроизводительных мониторах.</p>
@@ -598,7 +598,7 @@
         </section>
 
         <section class="hero-slide">
-            <img src="img/image0_large (1).jpg" alt="Игровая периферия Luna" class="hero-background-image">
+            <img src="img/image0_large (4) (1).jpg" alt="Игровая периферия Luna" class="hero-background-image">
             <div class="hero-content">
                 <h2>Полная Боевая Готовность</h2>
                 <p>Оснастите свою станцию лучшей игровой периферией для максимальной производительности и комфорта.</p>
@@ -607,7 +607,7 @@
         </section>
 
         <section class="hero-slide">
-            <img src="img/image0_large (2).jpg" alt="Игровые клавиатуры Luna" class="hero-background-image">
+            <img src="img/Снимок экрана 2025-06-13 014401.png" alt="Игровые клавиатуры Luna" class="hero-background-image">
             <div class="hero-content">
                 <h2>Превосходство в Каждом Нажатии</h2>
                 <p>Выберите свою идеальную клавиатуру для мгновенного отклика и тактического преимущества.</p>
