--- a/index.html
+++ b/index.html
@@ -559,16 +559,16 @@
 
     <div class="hero-sections">
         <section class="hero-slide">
-            <img src="img/Airbrush-Image-Enhancer-1749760872731.jpeg" alt="Игровая периферия Luna" class="hero-background-image">
+            <img src="img/image0_large (4) (1).jpg" alt="Игровая периферия Luna" class="hero-background-image">
             <div class="hero-content">
                 <h2>Полная Боевая Готовность</h2>
                 <p>Оснастите свою станцию лучшей игровой периферией для максимальной производительности и комфорта.</p>
-                <button class="btn">Изучить Периферию</button>
+                <button class="btn" data-scroll-to="peripherals-section">Изучить Периферию</button>
             </div>
         </section>
 
         <section class="hero-slide">
-            <img src="img/image0_large (4) (1).jpg" alt="Игровые мониторы Luna" class="hero-background-image">
+            <img src="img/Airbrush-Image-Enhancer-1749760872731.jpeg" alt="Игровые мониторы Luna" class="hero-background-image">
             <div class="hero-content">
                 <h2>Визуальное Превосходство</h2>
                 <p>Погрузитесь в игровой мир с кристально чистым изображением на наших высокопроизводительных мониторах.</p>
@@ -645,6 +645,60 @@
             </div>
         </section>
     </main>
+
+    <section id="peripherals-section" class="content">
+        <h2 class="products-section-title">Игровая Периферия</h2>
+        <section class="products">
+            <div class="product-card">
+                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Игровая+Мышь+Pro" alt="Игровая Мышь Luna Pro X">
+                <h3 class="product-name">Игровая Мышь Luna Pro X</h3>
+                <p class="product-description-short">Высокоточная мышь для киберспортсменов, 16000 DPI.</p>
+                <div class="price">30 000 KZT</div>
+                <button class="btn">Купить</button>
+                <button class="gemini-btn">✨ Улучшить описание</button>
+            </div>
+            <div class="product-card">
+                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Мех.+Клавиатура" alt="Механическая Клавиатура Luna RGB">
+                <h3 class="product-name">Механическая Клавиатура Luna RGB</h3>
+                <p class="product-description-short">Надежная механическая клавиатура с настраиваемой RGB подсветкой.</p>
+                <div class="price">55 000 KZT</div>
+                <button class="btn">Купить</button>
+                <button class="gemini-btn">✨ Улучшить описание</button>
+            </div>
+            <div class="product-card">
+                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Игровая+Гарнитура" alt="Игровая Гарнитура Luna SoundMaster">
+                <h3 class="product-name">Игровая Гарнитура Luna SoundMaster</h3>
+                <p class="product-description-short">Погрузитесь в игру с объемным звуком 7.1 и кристально чистым микрофоном.</p>
+                <div class="price">40 000 KZT</div>
+                <button class="btn">Купить</button>
+                <button class="gemini-btn">✨ Улучшить описание</button>
+            </div>
+             <div class="product-card">
+                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Коврик+для+Мыши" alt="Коврик для Мыши Luna Glide XL">
+                <h3 class="product-name">Коврик для Мыши Luna Glide XL</h3>
+                <p class="product-description-short">Игровой коврик увеличенного размера для максимального контроля.</p>
+                <div class="price">8 000 KZT</div>
+                <button class="btn">Купить</button>
+                <button class="gemini-btn">✨ Улучшить описание</button>
+            </div>
+            <div class="product-card">
+                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Веб-камера" alt="Веб-камера Luna StreamCam Pro">
+                <h3 class="product-name">Веб-камера Luna StreamCam Pro</h3>
+                <p class="product-description-short">Full HD веб-камера для стримов и видеосвязи.</p>
+                <div class="price">28 000 KZT</div>
+                <button class="btn">Купить</button>
+                <button class="gemini-btn">✨ Улучшить описание</button>
+            </div>
+             <div class="product-card">
+                <img src="https://placehold.co/200x150/1a1a1a/0f0?text=Микрофон+Gaming" alt="Микрофон Luna Broadcast">
+                <h3 class="product-name">Микрофон Luna Broadcast</h3>
+                <p class="product-description-short">Профессиональный USB-микрофон для чистого голоса в играх и стримах.</p>
+                <div class="price">32 000 KZT</div>
+                <button class="btn">Купить</button>
+                <button class="gemini-btn">✨ Улучшить описание</button>
+            </div>
+        </section>
+    </section>
 
     <div id="description-modal" class="modal-overlay">
         <div class="modal-content">
@@ -785,6 +839,19 @@
         heroSlides.forEach(slide => {
             observer.observe(slide);
         });
+
+        // Добавляем обработчик для кнопки "Изучить Периферию"
+        const explorePeripheralsBtn = document.querySelector('.hero-slide .btn[data-scroll-to="peripherals-section"]');
+        if (explorePeripheralsBtn) {
+            explorePeripheralsBtn.addEventListener('click', (event) => {
+                event.preventDefault(); // Предотвращаем стандартное действие ссылки
+                const targetId = event.target.dataset.scrollTo;
+                const targetElement = document.getElementById(targetId);
+                if (targetElement) {
+                    targetElement.scrollIntoView({ behavior: 'smooth' }); // Плавная прокрутка
+                }
+            });
+        }
     </script>
 </body>
 </html>
