--- a/index.html
+++ b/index.html
@@ -559,20 +559,20 @@
 
     <div class="hero-sections">
         <section class="hero-slide">
-            <img src="img/Airbrush-Image-Enhancer-1749760872731.jpeg" alt="Игровые мониторы Luna" class="hero-background-image">
-            <div class="hero-content">
-                <h2>Визуальное Превосходство</h2>
-                <p>Погрузитесь в игровой мир с кристально чистым изображением на наших высокопроизводительных мониторах.</p>
-                <button class="btn" data-scroll-to="monitors-section">Посмотреть Мониторы</button>
-            </div>
-        </section>
-
-        <section class="hero-slide">
             <img src="img/image0_large (4) (1).jpg" alt="Игровая периферия Luna" class="hero-background-image">
             <div class="hero-content">
                 <h2>Полная Боевая Готовность</h2>
                 <p>Оснастите свою станцию лучшей игровой периферией для максимальной производительности и комфорта.</p>
                 <button class="btn" data-scroll-to="peripherals-section">Изучить Периферию</button>
+            </div>
+        </section>
+
+        <section class="hero-slide">
+            <img src="img/Airbrush-Image-Enhancer-1749760872731.jpeg" alt="Игровые мониторы Luna" class="hero-background-image">
+            <div class="hero-content">
+                <h2>Визуальное Превосходство</h2>
+                <p>Погрузитесь в игровой мир с кристально чистым изображением на наших высокопроизводительных мониторах.</p>
+                <button class="btn" data-scroll-to="monitors-section">Посмотреть Мониторы</button>
             </div>
         </section>
 
@@ -619,7 +619,7 @@
 
             <div class="product-card">
                 <img src="https://placehold.co/200x150/111/0f0?text=МЕХ.+КЛАВИАТУРА" alt="Механическая клавиатура Luna Tactile">
-                <h3 class="product-name">Механическая клавиатура Luna Tactile</h3>
+                <h3 class="product-name">Механическая Клавиатура Luna Tactile</h3>
                 <p class="product-description-short">Быстрый отклик и приятные тактильные ощущения.</p>
                 <div class="price">45 000 KZT</div>
                 <button class="btn">Купить</button>
