--- a/index.html
+++ b/index.html
@@ -591,7 +591,8 @@
 
         <section class="products">
             <div class="product-card">
-                <img src="https://placehold.co/200x150/111/0f0?text=ИГРОВОЙ+ПК" alt="Игровой ПК Luna Pro">
+                <!-- Обновленная ссылка на изображение -->
+                <img src="img/20250613_1853_image.jpg" alt="Игровой ПК Luna Pro">
                 <h3 class="product-name">Игровой ПК Luna Pro</h3>
                 <p class="product-description-short">Мощный компьютер для максимальной производительности в любых играх.</p>
                 <div class="price">499 990 KZT</div>
