--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
         <section class="products">
             <div class="product-card">
                 <!-- Обновленная ссылка на изображение -->
-                <img src="img/20250613_1853_image.jpg" alt="Игровой ПК Luna Pro">
+                <img src="uploaded:20250613_1853_image.jpg-1f5cdb75-6e42-40c6-801d-812e5e9ffb25" alt="Игровой ПК Luna Pro">
                 <h3 class="product-name">Игровой ПК Luna Pro</h3>
                 <p class="product-description-short">Мощный компьютер для максимальной производительности в любых играх.</p>
                 <div class="price">499 990 KZT</div>
